# LR1

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
lib/: lr1.cpp  lr1.h
tests/: CMakeLists.txt  lr1_test.cpp
